--- a/src/Screen/Login/style.css
+++ b/src/Screen/Login/style.css
@@ -1,61 +1,74 @@
+.body{
+    height: 100%;
+    width: 98%;
+    position:absolute ;
+    padding : 0 1%;
+    background-color: #ff862f;
+}
 .header{
-    background-color: chocolate;
-    height : 11%;
-    color:bisque;
-    font-size: 3vw;
+    color:white;
+    font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    border-radius: 10px;
     font-weight: bold;
 }
-.framePic{
-    width: 25%;
-    height:25vw;
-    background-color: chocolate;
-    padding: 2%;
-    border-radius:20px 20px 0 0 ;
-    margin-left: 65%;
-    position: absolute;
+.contentBg{
+    width:40%;
+    height: auto;
+    float:right;
+    /* opacity: 0.6; */
+    margin: 5px 10px 0 0;
 }
-.dogPic{
-    width:100%;
-    height: 80%;
-    border-radius: 20px;
-    margin-bottom:5%;
+.contentBg:hover{
+    cursor: pointer;
+}
+.contentBg:active{
+    background-color: aliceblue;
+    cursor: progress;
+}
+.artikel{
+    color: white;
+    font-weight: 500;
+    font-size:20px;
 }
 .btn{
     border-style: hidden;
     border-radius: 4px;
-    /* width: 100%; */
-    font-size: 1.2vw;
+    font-size: 15px;
     font-weight: bold;
     color: white;
-    background-color: chocolate;
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+    
 }
 .btn:hover{
-    background-color: white;
-    color:chocolate;
-    border-color: chocolate;
-    border-style: double;
+    cursor: pointer;
 }
 .btn:active{
 color: white;
 background-color: chocolate;
 }
 
-.clear{
+.btnClear {
     border-style: hidden;
     border-radius: 4px;
-    width: 10%;
-    font-size: 1.2em;
+    font-size: 17px;
+    font-weight: bold;
+    text-align: center;
     color: white;
-    background-color: transparent;
+    background-color: chocolate;
+}
+.btnClear:hover {
+    cursor: pointer;
+    background-color: white;
+    color: Red;
+    font-weight: bold;
 }
 .cardListSub{
     text-transform: capitalize;
     background-color: chocolate;
-    width: 20vw;
-    padding : 10px 5px 5px 10px ;
+    width: 15%;
+    padding : 5px ;
     border-radius: 20px;
 }
 .captionList{
@@ -67,9 +80,7 @@ background-color: chocolate;
 .subBreedsItem{
     background-color: transparent;
     border-style: none;
-    text-decoration: underline;
     color : beige;
-    font-weight: bold;
     text-transform: capitalize;
     margin-bottom: 2%;
     width :90%;
@@ -78,10 +89,8 @@ background-color: chocolate;
 }
 .subBreedsItem:hover {
     background-color: beige;
-    border-style: none;
-    text-decoration: underline;
     color: chocolate;
     font-weight: bold;
-    text-transform: capitalize;
-    margin-bottom: 2%;
+    cursor: pointer;
+
 }
