--- a/src/Screen/Login/style.css
+++ b/src/Screen/Login/style.css
@@ -1,8 +1,8 @@
 .body{
     height: 100%;
-    width: 98%;
+    width: 100%;
     position:absolute ;
-    padding : 0 1%;
+    /* padding : 0 1%; */
     background-color: #ff862f;
 }
 .header{
@@ -13,10 +13,9 @@
 }
 .contentBg{
     width:40%;
-    height: auto;
+    height: 80vh;
     float:right;
-    /* opacity: 0.6; */
-    margin: 5px 10px 0 0;
+    margin: 10px 20px 0 0;
 }
 .contentBg:hover{
     cursor: pointer;
@@ -29,6 +28,7 @@
     color: white;
     font-weight: 500;
     font-size:20px;
+    margin:0 10px;
 }
 .btn{
     border-style: hidden;
@@ -39,7 +39,7 @@
     width: 100%;
     text-align: center;
     padding: 5px;
-    
+    margin: 0 0 0 2%;
 }
 .btn:hover{
     cursor: pointer;
@@ -67,7 +67,7 @@ background-color: chocolate;
 .cardListSub{
     text-transform: capitalize;
     background-color: chocolate;
-    width: 15%;
+    width: 150px;
     padding : 5px ;
     border-radius: 20px;
 }
@@ -82,7 +82,7 @@ background-color: chocolate;
     border-style: none;
     color : beige;
     text-transform: capitalize;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
     width :90%;
     text-align: left;
     border-radius: 5px;
@@ -92,5 +92,21 @@ background-color: chocolate;
     color: chocolate;
     font-weight: bold;
     cursor: pointer;
-
+}
+.linkToGallery{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: chocolate;
+    margin : 5% 0 0 2%;
+    padding-left: 5%;
+    position:absolute;
+    width : 20%;
+    border-radius: 4px;
+}
+.linkToGallery:hover{
+    color: chocolate;
+    background-color: white;
+    font-size: 30px;
 }
