--- a/src/Screen/Login/style.css
+++ b/src/Screen/Login/style.css
@@ -110,3 +110,30 @@ background-color: chocolate;
     background-color: white;
     font-size: 30px;
 }
+
+@media only screen and (max-width : 600px){
+.body {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        overflow: scroll;
+        background-color: #ff862f;
+    }
+
+    .header {
+        color: white;
+        font-size: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+    }
+
+    .contentBg {
+        width: 80%;
+        height: 50vh;
+        float: right;
+        margin: 10px 10% 5% 10%;
+    }
+        .linkToGallery {
+            margin: 5% 0 10% 2%;
+        }
+}
