--- a/src/Screen/Login/style.css
+++ b/src/Screen/Login/style.css
@@ -113,7 +113,7 @@ background-color: chocolate;
 
 @media only screen and (max-width : 630px){
 .body {
-        height: 100%;
+        height: 150vh;
         width: 100%;
         position: absolute;
         overflow: scroll;
@@ -134,6 +134,14 @@ background-color: chocolate;
         margin: 10px 10% 5% 10%;
     }
         .linkToGallery {
+            width: 55%;
             margin: 5% 0 10% 2%;
+        }
+        .cardListSub {
+            text-transform: capitalize;
+            background-color: chocolate;
+            width: 50%;
+            padding: 5px;
+            border-radius: 20px;
         }
 }
