--- a/src/Screen/Galeri/style.css
+++ b/src/Screen/Galeri/style.css
@@ -1,37 +1,44 @@
 .title{
-    background-color: burlywood;
+    background-color: chocolate;
     height: 11%;
     color: black;
-    font-size: 3vw;
+    font-size: 35px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     border-radius: 10px;
     font-weight: bold;
 }
-
-.imgSubRndm{
-    background-color: chocolate;
-    display: flex;
-    flex-direction: row;
-    height: min-content;
-    
-}
-.columnMax{
-    rows: 4 auto;
-    /* display: list-item; */
-}
-.itemSubImg{
-    width: 90%;
-    height: 90%;
-    margin:5% 0 0 4%; 
-}
 h1{
+    color : black;
+    text-transform: capitalize;
+    margin : 0 0 0 5%;
+    font-size: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
-.searchBar{
+.searchBar {
     background-color: rgb(248, 209, 158);
-    height: 20%;
-    border:none;
-    padding : 2px 3px;
+    /* height: 7vh; */
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    width: 90%;
+    margin: 4% 0 0 3%;
+}
+.columnMax{
+    display: inline-grid;
+    margin-left: 1%;
+}
+.imgContainer{
+    background-color: chocolate;
+    height: min-content;
+    justify-content: space-around;
+    width: auto;
+    margin: 1% 0 0 0%
+}
+
+.itemSubImg{
+    width: 150px;
+    height: 150px;
+    margin:5% 0 0 4%;
+    display: grid;    
 }
