--- a/src/Screen/Galeri/style.css
+++ b/src/Screen/Galeri/style.css
@@ -17,16 +17,55 @@ h1{
 }
 .searchBar {
     background-color: rgb(248, 209, 158);
-    /* height: 7vh; */
     border: none;
     border-radius: 5px;
     padding: 15px;
     width: 90%;
     margin: 4% 0 0 3%;
+    display: flex;
+}
+.option{
+    background-color: chocolate;
+    width: 10vw;
+    height: auto;
+    padding:0.5%;
+    color: white;
+    border : none;
+    font-size: 25px;
+    border-radius: 10px;
+    margin: 0 2vw 0 0;
+}
+.option:hover{
+    cursor: pointer;
+    font-weight: bold;
+}
+.numInput{
+    background-color: chocolate;
+    color: white;
+    margin: 0 2vw 0 0;
+    width: 20%;
+    font-size: 25px;
+    border:none;
+    border-radius: 5px;
+}
+.searchBtn{
+    background-color: chocolate;
+        color: white;
+        width: 10%;
+        /* height: 40px; */
+        border: none;
+        border-radius: 20px;
+    font-size: 20px;
+}
+.searchBtn:hover {
+    color: chocolate;
+    background-color: white;
+    font-weight: bold;
+    font-size: 23px;
 }
 .columnMax{
     display: inline-grid;
-    margin-left: 1%;
+    margin: 1%;
 }
 .imgContainer{
     background-color: chocolate;
@@ -35,10 +74,7 @@ h1{
     width: auto;
     margin: 1% 0 0 0%
 }
-
-.itemSubImg{
-    width: 150px;
-    height: 150px;
-    margin:5% 0 0 4%;
-    display: grid;    
+.itemImg{
+    width: 160px;
+    height: 160px;    
 }
