--- a/src/Screen/Galeri/style.css
+++ b/src/Screen/Galeri/style.css
@@ -46,7 +46,7 @@ h1{
     width: 20%;
     font-size: 25px;
     border:none;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 .searchBtn{
     background-color: chocolate;
@@ -77,4 +77,33 @@ h1{
 .itemImg{
     width: 160px;
     height: 160px;    
+}
+@media only screen and (max-width : 630px) {
+.title {
+        height: auto;
+    }
+h1 {
+    font-size: 20px;
+}
+.searchBar {
+    width: 100%;
+    height: 9%;
+    margin:2% 0;
+}
+.option {
+    width: 50vw;
+    height: auto;
+}
+.numInput {
+    width: 30vw;
+    height: 5.5vh;
+    font-size: 15px;
+}
+.searchBtn {
+    width: 85%;
+    height: 40%;
+    border-radius: 10px;
+    font-size: 20px;
+    margin: 13% 0 0 -83%;
+}
 }
